sprite rendering stuff

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -71,7 +71,7 @@ add_executable(Cpp_Game_Engine
         core/io/Key.h
         core/ui/UI.cpp
         core/ui/UI.h core/ui/desktop/UIGLFW.cpp core/graphics/Camera.hpp
-        core/io/Mouse.cpp core/io/Mouse.h main2.cpp core/graphics/system.hpp core/graphics/opengl/MeshGl.cpp core/graphics/Mesh.cpp core/graphics/Shader.cpp core/graphics/opengl/ShaderGl.cpp sample/Scene2d.cpp sample/Scene2d.hpp core/sprite/SpriteRenderer.cpp core/sprite/SpriteRenderer.hpp core/resource/GraphicsLoader.hpp core/resource/loader/GlGraphicsLoader.cpp core/resource/utils.hpp include/ResourceId.hpp core/graphics/GraphicsArgs.hpp)
+        core/io/Mouse.cpp core/io/Mouse.h main2.cpp core/graphics/system.hpp core/graphics/opengl/MeshGl.cpp core/graphics/Mesh.cpp core/graphics/Shader.cpp core/graphics/opengl/ShaderGl.cpp sample/Scene2d.cpp sample/Scene2d.hpp core/sprite/SpriteRenderer.cpp core/sprite/SpriteRenderer.hpp core/resource/GraphicsLoader.hpp core/resource/loader/GlGraphicsLoader.cpp core/resource/utils.hpp include/ResourceId.hpp core/graphics/GraphicsArgs.hpp core/math/Rect.hpp)
 
 target_link_libraries(Cpp_Game_Engine
         #        EGL
